--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 </head>
 <body>
 <p>exploring github</p>
+<img src="image/head.png">
 </body>
 </html>
-
-echo "# My-projects" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/fahmidarubbaiath/My-projects.git
-git push -u origin main
